<resources>
    <string name="app_name">Inventory App</string>

    <string name="product_quantity">Quantity</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>

    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <string name="editor_activity_title_new_product">Add new book</string>
    <string name="editor_activity_title_edit_product">Edit book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="editor_insert_product_successful">Book saved</string>
    <string name="editor_insert_product_failed">Error with saving book</string>

    <string name="editor_update_product_successful">Book updated</string>
    <string name="editor_update_product_failed">Error with updating book</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_product_successful">Book deleted</string>
    <string name="editor_delete_product_failed">Error with deleting book</string>

    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="category_name">Book name</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_supplier">Supplier name</string>
    <string name="category_phonenumber">Phone number</string>

    <string name="hint_product_name">Name of the book</string>
    <string name="hint_product_price">0</string>
    <string name="hint_product_quantity">0</string>
    <string name="hint_phonenumber">044 123 4567</string>

    <string name="unit_product_price">€</string>

    <string name="supplier_unknown">Unknown</string>
    <string name="supplier_ebay">Ebay</string>
    <string name="supplier_market">Market</string>

    <string name="error_saving">Error with saving product</string>
    <string name="product_saved">Product saved with row id:</string>
    <string name="quantity_changed">Quantity has changed.</string>
    <string name="sold_out">Product is sold out.</string>
    <string name="product_not_zero">Number can not be zero or less</string>
    <string name="error_fill_fields">Please fill all the fields</string>

</resources>
