<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">


        <!-- Product category -->
        <LinearLayout
            android:id="@+id/book_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_name" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />
            </LinearLayout>
        </LinearLayout>

        <!-- Price category -->
        <LinearLayout
            android:id="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_price" />

            <!-- Input field -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:paddingRight="100dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/label_price_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_product_price"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Quantity category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:paddingLeft="4dp">

                <Button
                    android:id="@+id/decrement"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:text="-" />

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="60dp"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/increment"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:text="+" />

            </LinearLayout>
        </LinearLayout>

        <!-- Supplier category -->
        <LinearLayout
            android:id="@+id/container_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Supplier name drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_supplier"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <!-- Phone number category -->
        <LinearLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_phonenumber" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="4dp">

                <!-- Phone number field -->
                <EditText
                    android:id="@+id/edit_product_phonenumber"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_phonenumber"
                    android:inputType="number" />

                <ImageButton
                    android:id="@+id/phone_call"
                    android:layout_alignParentRight="true"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@android:drawable/stat_sys_phone_call"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Delete" />
</LinearLayout>
